...
            paddingLeft: 16,
            justifyContent: "center",
            alignItems: "flex-end",
          }}
          hitSlop={8}
          accessibilityRole="button"
          accessibilityLabel="Open profile menu"
        >
          <Text style={{ fontSize: 22 }}>
            <FontAwesome6 name="face-smile-beam" size={24} color="white" />
          </Text>
        </TouchableOpacity>
      </View>
...
